trunk/Archive2/d1/9f4d90e8bdee74/output
main.cpp: In instantiation of 'struct Foo<int>':
main.cpp:9:22:   required from here
main.cpp:6:5: error: static assertion failed: I take only floats, you fool
     static_assert(std::is_same<T, float>::value, "I take only floats, you fool");
     ^
main.cpp: In function 'int main()':
main.cpp:9:22: warning: unused variable 'f' [-Wunused-variable]
 int main() {Foo<int> f;}
                      ^
