trunk/Archive2/d1/9f4d90e8bdee74/main.cpp
#include <type_traits>



template <class T> struct Foo {
    static_assert(std::is_same<T, float>::value, "I take only floats, you fool");
}; 

int main() {Foo<int> f;}
